--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
       <div class="logo">
-        <a href="index.html"><img src="img/MainPage/Logo.png"/></a>
+        <a href="\"><img src="img/MainPage/Logo.png"/></a>
       </div>
       <div class="container-name">
         <img class="desvn" style="width: 850px; opacity: 0;" src="img/MainPage/desvn.png"/>
