--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
       </nav>
       <div class="logo">
-        <a href="\"><img src="img/MainPage/Logo.png"/></a>
+        <a href="."><img src="img/MainPage/Logo.png"/></a>
       </div>
       <div class="container-name">
         <img class="desvn" style="width: 850px; opacity: 0;" src="img/MainPage/desvn.png"/>
@@ -96,8 +96,8 @@
           </div>
         </div>
         <div class="number-page-container2">
-          <div class="number" style="color: rgb(21,21,21);">01</div>
-          <div class="number" style="color: rgb(21,21,21); opacity: 0;">02</div>
+          <div class="number" style="color: rgb(21,21,21);">00</div>
+          <div class="number" style="color: rgb(21,21,21); opacity: 0;">01</div>
           <div class="line-main"></div>
           <div>04</div>
         </div>
