Adding Projects and CV

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href="style/styleMain.css" type="text/css" rel="stylesheet"/>
     <!-- About page style -->
     <link href="style/styleAbout.css" type="text/css" rel="stylesheet"/>
+    <!-- Projects page style -->
+    <link href="style/styleProjects.css" type="text/css" rel="stylesheet"/>
+    <!-- CV page style -->
+    <link href="style/styleCV.css" type="text/css" rel="stylesheet"/>
     <!-- fonts source -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Varela" rel="stylesheet">
     <!-- icons source -->
@@ -100,6 +104,96 @@
           <div class="number" style="color: rgb(21,21,21); opacity: 0;">01</div>
           <div class="line-main"></div>
           <div>04</div>
+        </div>
+      </section>
+
+      <section id="projects">
+        <div class="lines-projects">
+          <span class="line-projects-1"></span>
+          <span class="line-projects-2"></span>
+        </div>
+        <div class="projects-title">
+          <div>REALIZACJE</div>
+        </div>
+        <div class="projects-container">
+          <figure class="project">
+            <img src="img/projects/BreakinWarsaw.png">
+            <div class="figure-info"><p style="color:white; font-family: Montserrat;">Break in Warsaw </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Logotyp</p></div>
+            <div class="info">
+              bla
+            </div>
+          </figure>
+          <figure class="project">
+              <img src="img/projects/VIII.png">
+              <div class="figure-info"><p style="color:white; font-family: Montserrat;">VIII </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Koszulki, Strony www</p></div>
+              <div class="info">
+                bla
+              </div>
+          </figure>
+          <figure class="project">
+            <img src="img/projects/Magura.png">
+            <div class="figure-info"><p style="color:white; font-family: Montserrat;">Magura Ubezpieczenia </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Identyfikacja Wizualna, Logotyp, Strony ww</p></div>
+            <div class="info">
+              bla
+            </div>
+          </figure>
+          <figure class="project">
+            <img src="img/projects/WydawnictwoMotocyklowe.png">
+            <div class="figure-info"><p style="color:white; font-family: Montserrat;">Wydawnictwo Motocyklowe </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Strony www</p></div>
+            <div class="info">
+              bla
+            </div>
+          </figure>
+          <figure class="project">
+            <img src="img/projects/SANDSTORM.png">
+            <div class="figure-info"><p style="color:white; font-family: Montserrat;">SandStorm </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Logotyp, Strony www</p></div>
+            <div class="info">
+              bla
+            </div>
+          </figure>
+          <figure class="project">
+            <img src="img/projects/Ganser.png">
+            <div class="figure-info"><p style="color:white; font-family: Montserrat;">Ganser </p><p style="color: rgb(14,164,217); font-family: Varela; font-size: 15px; padding-top:4px"> / Logotyp, Opakowania</p></div>
+            <div class="info">
+              bla
+            </div>
+          </figure>
+          <div class="number-page-container3">
+            <div class="number" style="color: rgb(21,21,21); margin-left: 25px;">01</div>
+            <div class="number" style="color: rgb(21,21,21); opacity: 0; margin-left: 25px;">02</div>
+            <div class="line-main"></div>
+            <div style="margin-left: 25px;">04</div>
+          </div>
+        </div>
+      </section>
+
+      <section id="cv">
+        <div class="lines-cv">
+          <span class="line-cv-1"></span>
+          <span class="line-cv-2"></span>
+          <span class="line-cv-3"></span>
+          <span class="line-cv-4"></span>
+          <span class="line-cv-5"></span>
+          <span class="line-cv-6"></span>
+          <span class="line-cv-7"></span>
+        </div>
+        <div class="cv-title">
+          <div>CV</div>
+        </div>
+        <div class="cv-container">
+          <figure><img src="img/cv/CV.png"></figure>
+          <div class="cv-content">
+            <div class="content-title"><strong>CV</strong> </div>
+            <div>Curriculum vitae - czyli, mój życiorys zawodowy.</div>
+            <div class="CVcontent">Rozmiar pliku: <i>2,53 MB</i><br>Format: <i>.pdf</i><br>Data: <i>28/02/2019</i><br>Autor: <i>DESVN</i></div>
+            <a class="cv-button" href=".">POBIERZ</a>
+          </div>
+        </div>
+        <div class="number-page-container4">
+          <div class="number" style="color: rgb(21,21,21); margin-left: 25px;">02</div>
+          <div class="number" style="color: rgb(21,21,21); opacity: 0; margin-left: 25px;">03</div>
+          <div class="line-main"></div>
+          <div style="margin-left: 25px;">04</div>
         </div>
       </section>
 
