Adding Projects and CV

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="number-page-container">
         <div class="number" style="color: white;">00</div>
         <div class="number" style="color: white; opacity: 0;">01</div>
-        <div class="line-main"></div>
+        <div class="line-main1"></div>
         <div>04</div>
       </div>
       <div class="go-about down">
