--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <link href="style/styleProjects.css" type="text/css" rel="stylesheet"/>
     <!-- CV page style -->
     <link href="style/styleCV.css" type="text/css" rel="stylesheet"/>
+    <!-- Contact page style -->
+    <link href="style/styleContact.css" type="text/css" rel="stylesheet"/>
     <!-- fonts source -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Varela" rel="stylesheet">
     <!-- icons source -->
@@ -42,7 +44,7 @@
       </div>
       <div class="container-name">
         <img class="desvn" style="width: 850px; opacity: 0;" src="img/MainPage/desvn.png"/>
-        <img class="design" style="margin-top: 50px; opacity: 0;" src="img/MainPage/design.png"/>
+        <img class="design" style="padding-top: 60px; opacity: 0;" src="img/MainPage/design.png"/>
       </div>
       <div class="number-page-container">
         <div class="number" style="color: white;">00</div>
@@ -197,7 +199,55 @@
         </div>
       </section>
 
+      <section id="contact">
+        <div class="lines-contact">
+          <span class="line-contact-1"></span>
+          <span class="line-contact-2"></span>
+          <span class="line-contact-3"></span>
+          <span class="line-contact-4"></span>
+        </div>
+        <div class="contact-title">
+          <div>KONTAKT</div>
+        </div>
+        <div class="contact-container">
+          <div class="content-title-contact">
+            <span>Skontaktuj się ze mną</span><span class="content-subtitle">aby dowiedzieć się więcej o mojej ofercie lub zacząć ze mną współpracę</span>
+          </div>
+          <div class="contact-content">
+            <div class="contact-info">
+              <a style="margin-bottom: 10px; max-width:10px;" href="mailto:kontakt@desvn.pl">kontakt@desvn.pl</a>
+              <a href="tel:+48733050252">+48 733 050 252</a></br></br>
+              os. Zgody 4/16</br>
+              31-000 Kraków, Polska</br>
+              <div class="contact-info-icons">
+                <a style="padding: 6px 13px 6px 13px;" class="contact-icon" href="https://facebook.com/mateusz.bies.92" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a style="padding: 6px 10px 6px 10px;" class="contact-icon" href="https://www.instagram.com/biesmateusz/" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a class="contact-icon" href="https://www.behance.net/desvn" target="_blank"><i class="fab fa-behance"></i></a>
+              </div>
+            </div>
+            <form class="mail-form" action="mailto:k.pasik97@gmail.com" method="post">
+              <input style="width: 47%; margin-right: 6%;" type="text" name="name" placeholder="Imię"><input style="width: 47%;" type="text" name="phone-number" placeholder="Numer telefonu"><br>
+              <input type="text" name="mail" placeholder="Adres e-mail"><br>
+              <input type="text" name="comment" placeholder="Twoja wiadomość"><br><br>
+              <input class="button-send" type="submit" value="WYŚLIJ">
+            </form>
+          </div>
+        </div>
+        <div class="number-page-container4">
+          <div class="number" style="color: white; margin-left: 25px;">03</div>
+          <div class="number" style="color: white; opacity: 0; margin-left: 25px;">04</div>
+          <div class="line-main1"></div>
+          <div style="margin-left: 25px;">04</div>
+        </div>
+      </section>
     </article>
+
+    <footer>
+      <span class="line-footer-1"></span>
+      <span>All rights reserved 2019</span>
+      <span>Webdesign by <a href=".">DESVN</a></span>
+      <span>Coded by <a href="https://github.com/Pasik97">Pasik97</a></span>
+    </footer>
     <!-- Main page animation -->
     <script src="scripts/scriptMain.js"></script>
   </body>
