Added Mobile Version

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>DESVN - Design</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <!-- Title icon -->
     <link rel="icon" href="img/MainPage/LogoTitle.png" type="image/png" sizes="5x5"/>
     <!-- Main page style -->
@@ -15,6 +16,8 @@
     <link href="style/styleCV.css" type="text/css" rel="stylesheet"/>
     <!-- Contact page style -->
     <link href="style/styleContact.css" type="text/css" rel="stylesheet"/>
+    <!-- Mobile style -->
+    <link href="style/styleMobile.css" type="text/css" rel="stylesheet"/>
     <!-- fonts source -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Varela" rel="stylesheet">
     <!-- icons source -->
@@ -143,7 +146,7 @@
                     <span></span>
                   </div>
                   <div class="content-info-title">
-                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                   </div>
                   <div class="info-content">
                     Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
@@ -210,7 +213,7 @@
                       <span></span>
                     </div>
                     <div class="content-info-title">
-                      <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                      <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                     </div>
                     <div class="info-content">
                       Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
@@ -277,7 +280,7 @@
                     <span></span>
                   </div>
                   <div class="content-info-title">
-                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                   </div>
                   <div class="info-content">
                     Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
@@ -348,7 +351,7 @@
                     <span></span>
                   </div>
                   <div class="content-info-title">
-                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                   </div>
                   <div class="info-content">
                     Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
@@ -416,7 +419,7 @@
                     <span></span>
                   </div>
                   <div class="content-info-title">
-                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                   </div>
                   <div class="info-content">
                     Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
@@ -483,7 +486,7 @@
                     <span></span>
                   </div>
                   <div class="content-info-title">
-                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><p style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"> / Logotyp, Opakowania</p>
+                    <p style="margin-left: 0px; margin-right: 0px; color:white; font-family: Montserrat;  font-weight: bold;">Ganser </p><span style="margin-left: 7px; color: rgb(14,164,217); font-family: Varela; font-size: 0.9vw; padding-top:3%;"><p class="content-info-subtitle"> / Logotyp, Opakowania</p></span>
                   </div>
                   <div class="info-content">
                     Projekt logotypu graficznego oraz opakowań nowo otwartej firmy o nazwie<strong> Ganser</strong>. Słowo<strong> /Gans/</strong> jest pochodzenia niemieckiego i oznacza<strong> /Gęś/</strong>. Klient zaznaczył aby logo kojarzyło się z literą<strong> /G/, gęsią </strong>oraz<strong> liściem</strong> – przy zachowaniu prostoty i elegancji – czego dopełnieniem są opakowania. W ostatecznym rozrachunku firma zajmuję się tworzeniem naturalnych produktów.
