--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
           </div>
           <div class="contact-content">
             <div class="contact-info">
-              <a style="margin-bottom: 10px; max-width:10px;" href="mailto:kontakt@desvn.pl">kontakt@desvn.pl</a>
+              <a style="margin-bottom: 10px;" href="mailto:kontakt@desvn.pl">kontakt@desvn.pl</a>
               <a href="tel:+48733050252">+48 733 050 252</a></br></br>
               os. Zgody 4/16</br>
               31-000 Kraków, Polska</br>
